--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="./IMG/qr.png" sizes="32x32" />
 
-    <title>Document</title>
+    <title>Generador QR</title>
 </head>
 <body>
     <div class="title">
@@ -31,11 +31,11 @@
             </div>
             <div class="content-foo">
                 <h4>Email</h4>
-                <p>Dannycuri14@gmail.com</p>
+                <p>Dannyvidalcrisostomocuri@gmail.com</p>
             </div>
             <div class="content-foo">
                 <h4>Github</h4>
-                <p><a href="https://github.com/DannyBomtenS">Link de mi Github</a></p>
+                <p><a href="https://github.com/DannyCrisostomo">DannyCrisostomo</a></p>
             </div>
         </div>
         <h2 class="titulo-final">&copy; Design | Danny Crisostomo</h2>
