--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="./IMG/qr.png" sizes="32x32" />
 
-    <title>Generador QR</title>
+    <title>QR Code</title>
 </head>
 <body>
     <div class="title">
@@ -15,11 +15,12 @@
     </div>
 
     <div class="container">
-            <input type="text" placeholder="Text or Url or Number" id="QrText">
+            <input type="text" placeholder="Escriba un texto, una URL o un número" id="QrText">
         <div class="ImgBox">
             <img src="img/qr.png" alt="QR Code" id="QrImage">
         </div>
-        <button onclick="GenerateQR()">Generate QR Code</button>
+        <button onclick="GenerateQR()">Generar QR</button>
+        <button onclick="DescargarQR()">Descargar QR</button>
     </div>
 
     <footer>
@@ -35,7 +36,7 @@
             </div>
             <div class="content-foo">
                 <h4>Github</h4>
-                <p><a href="https://github.com/DannyCrisostomo">DannyCrisostomo</a></p>
+                <p><a href="https://github.com/DannyCrisostomo">Danny Crisostomo</a></p>
             </div>
         </div>
         <h2 class="titulo-final">&copy; Design | Danny Crisostomo</h2>
